# crunch

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ci/: build_capnp.sh  ci_tests.sh
cmake/: FindCapnProto.cmake  FindMariaDB.cmake  FindMySQL.cmake
examples/: t1.1.capnp  t1.1.capnpd  t1.2.capnp  t1.capnp  t1.sql
mysql-test/crunch/: my.cnf
mysql-test/crunch/r/: alter_table.result  consolidate.result  data_types.result  deletes.result  key.result  optimize.result  orderby.result  rollback.result  update.result
mysql-test/crunch/t/: alter_table.test  consolidate.test  data_types.test  deletes.test  key.test  optimize.test  orderby.test  rollback.test  update.test
src/: capnp-mysql.cpp  capnp-mysql.hpp  crunch-alter-ctx.cpp  crunch-alter-ctx.hpp  crunch-delete.cpp  crunch-index.cpp  crunch-sysvars.cpp  crunch-sysvars.hpp  crunch-txn.cpp  crunch-txn.hpp  crunch.cpp  crunch.hpp  crunchdeleterow.capnp  crunchdeleterow.capnp.c++  crunchdeleterow.capnp.h  crunchrowlocation.capnp  crunchrowlocation.capnp.c++  crunchrowlocation.capnp.h  key.hpp  utils.cpp  utils.hpp
